styled nav links

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./vendors/css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="./resources/css/style-output.css">
+    <link rel="stylesheet" type="text/css" href="./resources/css/style.css">
     <link rel="stylesheet" type="text/css" href="./vendors/css/grid.css">
     <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900" rel="stylesheet">
 
@@ -17,7 +17,7 @@
        <nav>
 
            <a href="home" class="nav-img">
-             <img src="/resources/img/SVG/ee-logo.svg" width="104px">
+             <img src="/resources/img/SVG/ee-logo.svg" width="110px">
            </a>
            <a href="#system" class="nav-link">System</a>
            <a href="#training" class="nav-link">Das Training</a>
