--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
                 </div> 
           </section>
       </div>
+      <section class="content-1">
+        <h1>Unsere Welt wird immer komplexer</h1>
+        <p>True dat-</p>
+      </section>
     </main>
 
     <footer>
